--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@
 cmake_minimum_required(VERSION 3.5)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-set(EXTRA_COMPONENT_DIRS ../components)
+set(EXTRA_COMPONENT_DIRS ./components)
 set(COMPONENTS main esptool_py)
 
 add_compile_definitions(
