Add dependencies to AAC, FS and console commands libraries

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,9 +5,12 @@ idf_component_register( SRCS
                         INCLUDE_DIRS "inc"
                         PRIV_REQUIRES
                             # MbedCraft components
+                            mc_aac_decoder
                             mc_bt
-                            mc_cmd_system
+                            mc_cmd_aac
+                            mc_cmd_fs
                             mc_cmd_nvs
+                            mc_cmd_system
                             mc_console
                             mc_fs
                             mc_nvs
@@ -15,3 +18,5 @@ idf_component_register( SRCS
                             esp_event
                             bt
                         )
+
+spiffs_create_partition_image(storage ../resources FLASH_IN_PROJECT)
