Set submodules relatively to MbedCraft organization

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,30 @@
 [submodule "components/mc_bt"]
 	path = components/mc_bt
-	url = git@github.com:MbedCraft/mc_bt.git
+	url = ../mc_bt.git
 [submodule "components/mc_assert"]
 	path = components/mc_assert
-	url = git@github.com:MbedCraft/mc_assert.git
+	url = ../mc_assert.git
 [submodule "components/mc_cmd_system"]
 	path = components/mc_cmd_system
-	url = git@github.com:MbedCraft/mc_cmd_system.git
+	url = ../mc_cmd_system.git
 [submodule "components/mc_cmd_nvs"]
 	path = components/mc_cmd_nvs
-	url = git@github.com:MbedCraft/mc_cmd_nvs.git
+	url = ../mc_cmd_nvs.git
 [submodule "components/mc_console"]
 	path = components/mc_console
-	url = git@github.com:MbedCraft/mc_console.git
+	url = ../mc_console.git
 [submodule "components/mc_fs"]
 	path = components/mc_fs
-	url = git@github.com:MbedCraft/mc_fs.git
+	url = ../mc_fs.git
 [submodule "components/mc_nvs"]
 	path = components/mc_nvs
-	url = git@github.com:MbedCraft/mc_nvs.git
+	url = ../mc_nvs.git
 [submodule "components/mc_aac_decoder"]
 	path = components/mc_aac_decoder
-	url = git@github.com:MbedCraft/mc_aac_decoder.git
+	url = ../mc_aac_decoder.git
 [submodule "components/mc_cmd_aac"]
 	path = components/mc_cmd_aac
-	url = git@github.com:MbedCraft/mc_cmd_aac.git
+	url = ../mc_cmd_aac.git
 [submodule "components/mc_cmd_fs"]
 	path = components/mc_cmd_fs
-	url = git@github.com:MbedCraft/mc_cmd_fs.git
+	url = ../mc_cmd_fs.git
